Fixing issue on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,12 @@ nav {
     width: 100%;
     background-color: #3ad;
     height: 30px;
-    display: flex;
-    align-items: stretch;
+    /*display: flex;
+    align-items: stretch;*/
 }
 
 nav a {
+    width: 25%;
     margin: auto;
     display: block;
     cursor: pointer;
